--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Mi css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/valorant logo.png" type="image/x-icon">
+    <!-- meta -->
+    <meta name="viewport" content="width=device-width, initial-sacele=1.0">
+    <meta name="keywords" content="valorant, fps, juego, online, riot">
+    <meta name="description" content="Valorant es un hero shooter en primera persona multijugador gratuito desarrollado y publicado por Riot Games.">
+
 </head>
 <body class="container-fluid">
     <header>
@@ -101,5 +107,8 @@
     </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </body>
 </html>
