cambios en el formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -57,21 +57,19 @@
                     <p></p>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <div>
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text"  id="nombre" size="31">
-                    </div>
-                    <div>
-                        <label for="mail" class="form-label">Mail</label>
-                        <input type="email" id="mail" placeholder="nombre@ejemplo.com" size="35">
-                    </div>
-                    <div>
-                        <p>Dejanos tu consulta</p>
-                            <textarea name="" id="" cols="40" rows="2"></textarea>
-                    </div>
-                    <div>
-                        <button>Enviar</button>
-                    </div>
+                    <div class="mb-3">
+                <label for="inputName" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="inputName">
+            </div>
+            <div class="mb-3">
+                <label for="inputEmail" class="form-label">Mail</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="nombre@ejemplo.com">
+            </div>
+            <div class="form-floating">
+                <p>Dejanos tu consulta!</p>
+                <textarea class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <img class="sageRes" src="./img/sageRes.png" alt="Valorant Sage Ultimate">
@@ -81,6 +79,21 @@
                 </div>
             </form>
         </div>
+        <!-- <form>
+            <div class="mb-3">
+                <label for="inputName" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="inputName">
+            </div>
+            <div class="mb-3">
+                <label for="inputEmail" class="form-label">Mail</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="nombre@ejemplo.com">
+            </div>
+            <div class="form-floating">
+                <p>Dejanos tu consulta!</p>
+                <textarea class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form> -->
     </main>
     <footer>
         <div>
