Cambios del footer

--- a/contacto.html
+++ b/contacto.html
@@ -79,25 +79,27 @@
                 </div>
             </form>
         </div>
-        <!-- <form>
-            <div class="mb-3">
-                <label for="inputName" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="inputName">
-            </div>
-            <div class="mb-3">
-                <label for="inputEmail" class="form-label">Mail</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="nombre@ejemplo.com">
-            </div>
-            <div class="form-floating">
-                <p>Dejanos tu consulta!</p>
-                <textarea class="form-control"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form> -->
     </main>
     <footer>
         <div>
-            <p>Todos los dolares para mi.</p>
+            <h4 class="text-center">Seguinos en nuestras redes!</h4>
+            <ul class="redes container-fluid text-center">
+                <li>
+                    <a href="https://www.instagram.com/esvalorant/" target="_blank">
+                        <img src="./img/Redes/instagram.png" alt="Logo Instagram" width="44px"  height="44px" class="instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/VALORANTes"  target="_blank">
+                        <img src="./img/Redes/twitter.png" alt="Logo Twitter" width="44px"  height="44px" class="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/esVALORANT/" target="_blank">
+                        <img src="./img/Redes/facebook.png" alt="Logo Facebook" width="44px" height="44px" class="facebook">
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
     
