--- a/galeria.html
+++ b/galeria.html
@@ -87,7 +87,24 @@
     </main>
     <footer>
         <div>
-            <p>Todos los dolares para mi.</p>
+            <h4 class="text-center">Seguinos en nuestras redes!</h4>
+            <ul class="redes container-fluid text-center">
+                <li>
+                    <a href="https://www.instagram.com/esvalorant/" target="_blank">
+                        <img src="./img/Redes/instagram.png" alt="Logo Instagram" width="44px"  height="44px" class="instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/VALORANTes"  target="_blank">
+                        <img src="./img/Redes/twitter.png" alt="Logo Twitter" width="44px"  height="44px" class="twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/esVALORANT/" target="_blank">
+                        <img src="./img/Redes/facebook.png" alt="Logo Facebook" width="44px" height="44px" class="facebook">
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
