--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Mi css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/valorant logo.png" type="image/x-icon">
@@ -90,17 +89,24 @@
 
 
     </main>
-    <footer class="">
+    <footer>
         <div>
-            <ul class="redes">
+            <h4 class="text-center">Seguinos en nuestras redes!</h4>
+            <ul class="redes container-fluid text-center">
                 <li>
-                    <a href="https://www.instagram.com/esvalorant/">Instagram</a>
+                    <a href="https://www.instagram.com/esvalorant/" target="_blank">
+                        <img src="./img/Redes/instagram.png" alt="Logo Instagram" width="44px"  height="44px" class="instagram">
+                    </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/VALORANTes">Twitter</a>
+                    <a href="https://twitter.com/VALORANTes"  target="_blank">
+                        <img src="./img/Redes/twitter.png" alt="Logo Twitter" width="44px"  height="44px" class="twitter">
+                    </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/esVALORANT/">Facebook</a>
+                    <a href="https://www.facebook.com/esVALORANT/" target="_blank">
+                        <img src="./img/Redes/facebook.png" alt="Logo Facebook" width="44px" height="44px" class="facebook">
+                    </a>
                 </li>
             </ul>
         </div>
@@ -108,7 +114,6 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 </html>
