implementacion de una segunda fuente

--- a/descarga.html
+++ b/descarga.html
@@ -51,7 +51,7 @@
     </header>
     <main>
         <div data-aos="zoom-in" class="jugaYa">
-            <p>JUGA AHORA</p>
+            <p>JUGa AHORa</p>
         </div>
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
