--- a/descarga.html
+++ b/descarga.html
@@ -59,6 +59,10 @@
                 <a href="https://playvalorant.com/es-mx/">Descarga</a>
             </button>
         </div>
+
+        <div class="containerJett container-fluid">
+            <img src="./img/foto.webp" alt="iamgen de Jett" class="fotoJett">
+        </div>
     </main>
     <footer>
         <div>
